# HVAC-Simulator-2026

./: .gitignore  CLAUDE.md  index.html  package.json  style.css
assets/locales/: de.json  en.json
infos/: HVAC-Simulator-Lite-PRD.md
js/: app.js
js/io/: pdfExport.js  projectFile.js
js/scene/: comparisonRenderer.js  obstacleManager.js  outletModels.js  outletPlacer.js  roomBuilder.js  sceneManager.js  visualization.js
js/simulation/: acoustics.js  comfort.js  diffuserDB.js  jetInteraction.js  jetPhysics.js
js/ui/: i18n.js  properties.js  roomModal.js  sidebar.js  toolbar.js  undoRedo.js
lib/addons/capabilities/: WebGL.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
