[package]
name = "hvac-simulator"
version = "2.0.0"
description = "HVAC Airflow & Sound Simulator"
authors = [""]
edition = "2021"

[lib]
name = "hvac_simulator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
